# Sistema-Multiagentes-para-la-Gesti-n-de-Viajes-en-La-Habana

./: README.md  alembic.ini  bootstrap.py  main.py  pyproject.toml  requirements.txt  viajes.db
Agent/: Agent.py  __init__.py  base.py  travel_agent.py  weather_agent.py
agents/: __init__.py  orquestator.py  orquestator_agent.py  travel_agent.py  weather_agent.py
alembic/: env.py
alembic/versions/: 56b0871d92e2_add_conversaciones_table.py  644d6094333a_add_conversaciones_table.py  df99f31098bf_creación_inicial_de_tablas.py
api/: agent.py  memory.py  viajes.py
api/routers/: agent.py  memory.py
core/: config.py  session.py
data/: models.py  viajes.db
database/: viajes.db
domain/: models.py
memory/: memory_storage.json
src/Agent/: Agent.py  __init__.py  orchestador_agent.py  travel_agent.py  weather_agent.py
src/agents/: __init__.py  weather_agent.py
src/agents/tools/: orquestator_tools.py  travel_agent_tools.py  weather_agent_tools.py
src/api/routers/: viajes.py
src/core/: session.py
src/domain/: models.py  schemas.py
src/infrastructure/api/: database_agent.py  orchestador.py  weather_client.py
src/memory/: memory_service.py  memory_storage.json
